fix: spacing in the checklist view

--- a/templates/g5_helium/custom/scss/global.scss
+++ b/templates/g5_helium/custom/scss/global.scss
@@ -751,7 +751,6 @@ footer#g-footer > .g-container {
       justify-content: center;
       align-items: center;
       border-radius: 8px;
-      margin: 8px 0;
 
 
       span {
@@ -761,7 +760,6 @@ footer#g-footer > .g-container {
   }
 
   .em-attachment-dropzone {
-    margin-top: 4px !important;
     border: unset !important;
     padding: 0;
     margin-bottom: 0 !important;
